dark mode. fixed antd flicker

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,16 @@
   --foreground: #171717;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #363636;
     --foreground: #ededed;
   }
-} */
+}
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
